--- a/main.lfm
+++ b/main.lfm
@@ -1,10 +1,10 @@
 object MainForm: TMainForm
-  Left = 437
+  Left = 411
   Height = 463
-  Top = 243
+  Top = 128
   Width = 605
   BorderStyle = bsDialog
-  Caption = 'MainForm'
+  Caption = 'Parasites Database'
   ClientHeight = 463
   ClientWidth = 605
   OnCreate = FormCreate
@@ -37,7 +37,8 @@ object MainForm: TMainForm
     BorderSpacing.Top = 5
     BorderSpacing.Right = 5
     BorderSpacing.Bottom = 20
-    Caption = 'Next'
+    Caption = '&Report'
+    OnClick = BtnNextClick
     TabOrder = 1
   end
   object BtnExit: TBitBtn
@@ -53,7 +54,7 @@ object MainForm: TMainForm
     Width = 171
     Anchors = [akLeft, akRight, akBottom]
     BorderSpacing.Around = 5
-    Caption = 'Exit'
+    Caption = 'E&xit'
     OnClick = BtnExitClick
     TabOrder = 2
   end
@@ -68,7 +69,7 @@ object MainForm: TMainForm
     Width = 171
     Anchors = [akLeft, akRight, akBottom]
     BorderSpacing.Bottom = 20
-    Caption = 'Database'
+    Caption = '&Database'
     OnClick = BtnDbMgrClick
     TabOrder = 3
   end
@@ -125,4 +126,4 @@ object MainForm: TMainForm
     left = 80
     top = 200
   end
-end
+end
